--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "node node_modules/react-native/local-cli/cli.js start"
   },
   "dependencies": {
-    "react-native": "^0.18.0-rc"
+    "react-native": "^0.18.0-rc",
+    "react-native-geocoder": "^0.2.0"
   }
 }
