--- a/package.json
+++ b/package.json
@@ -3,10 +3,18 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "node node_modules/react-native/local-cli/cli.js start"
+    "start": "node node_modules/react-native/local-cli/cli.js start",
+    "setup_project": "npm run step1; npm run step2",
+    "step1": "rm -rf node_modules/react-native/node_modules/react; rm -rf node_modules/react-native/node_modules/fbjs; rm -rf node_modules/react/node_modules/fbjs",
+    "step2": "cd node_modules; find . -name .babelrc | grep -v packager | xargs rm"
   },
   "dependencies": {
-    "react-native": "^0.18.0-rc",
-    "react-native-geocoder": "^0.2.0"
+    "fbjs": "^0.6.1",
+    "react-native": "0.18.0-rc",
+    "react-native-geocoder": "^0.2.0",
+    "react-redux": "4.0.6",
+    "redux": "3.0.5",
+    "redux-logger": "^2.3.2",
+    "redux-thunk": "1.0.0"
   }
 }
