--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-native-geocoder": "^0.2.0",
     "react-redux": "4.0.6",
     "redux": "3.0.5",
+    "redux-form": "^4.1.4",
     "redux-logger": "^2.3.2",
     "redux-thunk": "1.0.0"
   }
