--- a/ios/TemAcucar/Info.plist
+++ b/ios/TemAcucar/Info.plist
@@ -44,5 +44,25 @@
     <key>NSAllowsArbitraryLoads</key>
     <true/>
   </dict>
+	<key>CFBundleURLTypes</key>
+	<array>
+	  <dict>
+	  <key>CFBundleURLSchemes</key>
+	  <array>
+	    <string>fb590253407789297</string>
+	  </array>
+	  </dict>
+	</array>
+	<key>FacebookAppID</key>
+	<string>590253407789297</string>
+	<key>FacebookDisplayName</key>
+	<string>Tem Açucar Testes</string>
+	<key>LSApplicationQueriesSchemes</key>
+	<array>
+	  <string>fbapi</string>
+	  <string>fb-messenger-api</string>
+	  <string>fbauth2</string>
+	  <string>fbshareextension</string>
+	</array>
 </dict>
 </plist>
