--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-native": "0.18.0-rc",
     "react-native-facebook-login": "danielweinmann/react-native-facebook-login",
     "react-native-geocoder": "^0.2.0",
+    "react-native-gifted-spinner": "0.0.3",
     "react-native-keychain": "^0.2.7",
     "react-redux": "4.0.6",
     "redux": "3.0.5",
