--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "react-native-geocoder": "^0.2.0",
     "react-native-gifted-spinner": "0.0.3",
     "react-native-keychain": "^0.2.7",
+    "react-native-scrollable-tab-view": "^0.3.5",
+    "react-native-vector-icons": "^1.1.1",
     "react-redux": "4.0.6",
     "redux": "3.0.5",
     "redux-form": "^4.1.4",
