--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "fbjs": "^0.6.1",
     "react-native": "0.18.0-rc",
+    "react-native-drawer-layout": "^0.3.5",
     "react-native-facebook-login": "danielweinmann/react-native-facebook-login",
     "react-native-geocoder": "^0.2.0",
     "react-native-gifted-spinner": "0.0.3",
