--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-native-gifted-spinner": "0.0.3",
     "react-native-keychain": "^0.2.7",
     "react-native-scrollable-tab-view": "^0.3.5",
+    "react-native-slider": "jeanregisser/react-native-slider",
     "react-native-vector-icons": "^1.1.1",
     "react-redux": "4.0.6",
     "redux": "3.0.5",
