--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
   },
   "dependencies": {
     "fbjs": "^0.6.1",
+    "moment": "^2.11.1",
     "react-native": "0.18.0-rc",
     "react-native-drawer-layout": "^0.3.5",
     "react-native-facebook-login": "danielweinmann/react-native-facebook-login",
     "react-native-geocoder": "^0.2.0",
+    "react-native-gifted-form": "danielweinmann/react-native-gifted-form",
     "react-native-gifted-spinner": "0.0.3",
     "react-native-keychain": "^0.2.7",
+    "react-native-router-flux": "^2.1.4",
     "react-native-scrollable-tab-view": "^0.3.5",
     "react-native-slider": "jeanregisser/react-native-slider",
     "react-native-vector-icons": "^1.1.1",
