--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "fbjs": "^0.6.1",
     "moment": "^2.11.1",
     "react-native": "0.18.0-rc",
+    "react-native-button": "^1.3.1",
     "react-native-drawer-layout": "^0.3.5",
     "react-native-facebook-login": "danielweinmann/react-native-facebook-login",
     "react-native-geocoder": "^0.2.0",
