--- a/package.json
+++ b/package.json
@@ -9,24 +9,24 @@
     "step2": "cd node_modules; find . -name .babelrc | grep -v packager | xargs rm"
   },
   "dependencies": {
-    "fbjs": "^0.6.1",
-    "moment": "^2.11.1",
-    "react-native": "0.18.0-rc",
-    "react-native-button": "^1.3.1",
-    "react-native-drawer-layout": "^0.3.5",
+    "fbjs": "^0.6.0",
+    "moment": "2.11.1",
+    "react-native": "0.19.0",
+    "react-native-button": "1.3.1",
+    "react-native-drawer-layout": "0.3.5",
     "react-native-facebook-login": "danielweinmann/react-native-facebook-login",
-    "react-native-geocoder": "^0.2.0",
+    "react-native-geocoder": "0.2.0",
     "react-native-gifted-form": "danielweinmann/react-native-gifted-form",
     "react-native-gifted-spinner": "0.0.3",
-    "react-native-keychain": "^0.2.7",
+    "react-native-keychain": "0.2.7",
     "react-native-router-flux": "aksonov/react-native-router-flux",
-    "react-native-scrollable-tab-view": "^0.3.5",
+    "react-native-scrollable-tab-view": "0.3.5",
     "react-native-slider": "jeanregisser/react-native-slider",
-    "react-native-vector-icons": "^1.1.1",
-    "react-redux": "4.0.6",
-    "redux": "3.0.5",
-    "redux-form": "^4.1.4",
-    "redux-logger": "^2.3.2",
-    "redux-thunk": "1.0.0"
+    "react-native-vector-icons": "1.1.1",
+    "react-redux": "4.3.0",
+    "redux": "3.2.1",
+    "redux-form": "4.1.6",
+    "redux-logger": "2.5.0",
+    "redux-thunk": "1.0.3"
   }
 }
