--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "react-native": "0.19.0",
     "react-native-button": "1.3.1",
     "react-native-drawer-layout": "0.3.5",
-    "react-native-facebook-login": "danielweinmann/react-native-facebook-login",
+    "react-native-facebook-login": "1.0.3",
     "react-native-geocoder": "0.2.0",
     "react-native-gifted-form": "0.0.2",
     "react-native-gifted-spinner": "0.0.3",
