--- a/package.json
+++ b/package.json
@@ -12,11 +12,11 @@
     "fbjs": "^0.6.0",
     "moment": "2.11.1",
     "react-native": "0.19.0",
-    "react-native-button": "1.3.1",
+    "apsl-react-native-button": "danielweinmann/react-native-button",
     "react-native-drawer-layout": "0.3.5",
     "react-native-facebook-login": "1.0.3",
     "react-native-geocoder": "0.2.0",
-    "react-native-gifted-form": "0.0.2",
+    "react-native-gifted-form": "danielweinmann/react-native-gifted-form",
     "react-native-gifted-spinner": "0.0.3",
     "react-native-keychain": "0.2.7",
     "react-native-router-flux": "aksonov/react-native-router-flux",
