--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
     "step2": "cd node_modules; find . -name .babelrc | grep -v packager | xargs rm"
   },
   "dependencies": {
+    "apsl-react-native-button": "danielweinmann/react-native-button",
     "fbjs": "^0.6.0",
     "moment": "2.11.1",
     "react-native": "0.19.0",
-    "apsl-react-native-button": "danielweinmann/react-native-button",
+    "react-native-communications": "0.2.3",
     "react-native-drawer-layout": "0.3.5",
     "react-native-facebook-login": "1.0.3",
     "react-native-geocoder": "0.2.0",
