--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "apsl-react-native-button": "danielweinmann/react-native-button",
     "fbjs": "^0.6.0",
     "moment": "2.11.1",
+    "object-key-filter": "0.0.4",
     "react-native": "0.19.0",
     "react-native-communications": "0.2.3",
     "react-native-drawer-layout": "0.3.5",
@@ -19,9 +20,9 @@
     "react-native-geocoder": "0.3.1",
     "react-native-gifted-form": "FaridSafi/react-native-gifted-form",
     "react-native-gifted-spinner": "0.0.3",
-    "react-native-keychain": "0.2.7",
     "react-native-router-flux": "aksonov/react-native-router-flux",
     "react-native-scrollable-tab-view": "0.3.5",
+    "react-native-simple-store": "^0.1.0",
     "react-native-slider": "jeanregisser/react-native-slider",
     "react-native-vector-icons": "1.1.1",
     "react-redux": "4.3.0",
