--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "react-native-drawer-layout": "0.3.5",
     "react-native-facebook-login": "1.0.3",
     "react-native-geocoder": "0.3.1",
-    "react-native-gifted-form": "FaridSafi/react-native-gifted-form",
+    "react-native-gifted-form": "0.0.3",
     "react-native-gifted-spinner": "0.0.3",
     "react-native-router-flux": "aksonov/react-native-router-flux",
     "react-native-scrollable-tab-view": "0.3.5",
