--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -24,6 +24,12 @@
         android:configChanges="keyboard|keyboardHidden|screenLayout|screenSize|orientation"
         android:label="@string/app_name"
         android:theme="@android:style/Theme.Translucent.NoTitleBar"/>
+      <activity
+        android:name=".Activity"
+        android:label="Activity"
+        android:screenOrientation="portrait"
+        android:configChanges="keyboardHidden|orientation|screenSize">
+      </activity>
       <meta-data
         android:name="com.facebook.sdk.ApplicationId"
         android:value="@string/fb_app_id"/>
