--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -72,6 +72,7 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-maps')
     compile project(':react-native-facebook-login')
     compile project(':RNGeocoder')
     compile fileTree(dir: "libs", include: ["*.jar"])
