--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-native-geocoder": "0.3.1",
     "react-native-gifted-form": "0.0.3",
     "react-native-gifted-spinner": "0.0.3",
+    "react-native-maps": "^0.3.0",
     "react-native-router-flux": "aksonov/react-native-router-flux",
     "react-native-scrollable-tab-view": "0.3.5",
     "react-native-simple-store": "^0.1.0",
