--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "moment": "2.11.1",
     "object-key-filter": "0.0.4",
     "react-native": "0.19.0",
+    "react-native-android-config": "0.0.1",
     "react-native-communications": "0.2.3",
     "react-native-drawer-layout": "0.3.5",
     "react-native-facebook-login": "1.0.3",
