--- a/package.json
+++ b/package.json
@@ -19,12 +19,12 @@
     "react-native-drawer-layout": "0.3.5",
     "react-native-facebook-login": "1.0.3",
     "react-native-geocoder": "0.3.1",
-    "react-native-gifted-form": "0.0.3",
+    "react-native-gifted-form": "0.0.5",
     "react-native-gifted-spinner": "0.0.3",
-    "react-native-maps": "^0.3.0",
+    "react-native-maps": "0.3.0",
     "react-native-router-flux": "aksonov/react-native-router-flux",
     "react-native-scrollable-tab-view": "0.3.5",
-    "react-native-simple-store": "^0.1.0",
+    "react-native-simple-store": "0.1.0",
     "react-native-slider": "jeanregisser/react-native-slider",
     "react-native-vector-icons": "1.1.1",
     "react-redux": "4.3.0",
