--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "apsl-react-native-button": "danielweinmann/react-native-button",
     "fbjs": "^0.6.0",
+    "haversine": "1.0.0",
     "moment": "2.11.1",
     "object-key-filter": "0.0.4",
     "react-native": "0.19.0",
