--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "react-native-drawer-layout": "0.3.5",
     "react-native-facebook-login": "1.0.3",
     "react-native-geocoder": "0.3.1",
-    "react-native-gifted-form": "0.0.5",
+    "react-native-gifted-form": "danielweinmann/react-native-gifted-form#widget_focus",
     "react-native-gifted-spinner": "0.0.3",
     "react-native-maps": "0.3.0",
     "react-native-router-flux": "danielweinmann/react-native-router-flux#route_props",
