--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -1,6 +1,5 @@
 rootProject.name = 'TemAcucar'
 
-include ':react-native-android-config'
 include ':app'
 include ':react-native-maps'
 project(':react-native-maps').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-maps/android')
@@ -8,5 +7,5 @@ include ':react-native-facebook-login'
 project(':react-native-facebook-login').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-facebook-login/android')
 include ':RNGeocoder', ':app'
 project(':RNGeocoder').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-geocoder/android')
-project(':react-native-android-config').projectDir = new File(rootProject.projectDir,
-  '../node_modules/react-native-android-config/android')
+include ':react-native-android-config'
+project(':react-native-android-config').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-android-config/android')
