--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -15,6 +15,8 @@
       <activity
         android:name=".MainActivity"
         android:label="@string/app_name"
+        android:screenOrientation="portrait"
+        android:windowSoftInputMode="adjustNothing"
         android:configChanges="keyboard|keyboardHidden|orientation|screenSize">
         <intent-filter>
             <action android:name="android.intent.action.MAIN" />
@@ -30,7 +32,6 @@
       <activity
         android:name=".Activity"
         android:label="Activity"
-        android:screenOrientation="portrait"
         android:configChanges="keyboardHidden|orientation|screenSize">
       </activity>
       <meta-data
