Removes react-native-android-config and uses react-native-config

--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
     "moment": "2.11.1",
     "object-key-filter": "0.0.4",
     "react-native": "0.20.0",
-    "react-native-android-config": "0.0.1",
     "react-native-code-push": "1.7.3-beta",
     "react-native-communications": "0.2.3",
+    "react-native-config": "0.0.2",
     "react-native-drawer-layout": "0.3.5",
     "react-native-facebook-login": "1.0.3",
     "react-native-geocoder": "0.3.1",
