--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -1,11 +1,13 @@
 rootProject.name = 'TemAcucar'
 
+include ':react-native-config'
 include ':app'
+project(':react-native-config').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-config/android')
 include ':react-native-maps'
 project(':react-native-maps').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-maps/android')
 include ':react-native-facebook-login'
 project(':react-native-facebook-login').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-facebook-login/android')
 include ':RNGeocoder', ':app'
 project(':RNGeocoder').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-geocoder/android')
-include ':react-native-android-config'
-project(':react-native-android-config').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-android-config/android')
+include ':app', ':react-native-code-push'
+project(':react-native-code-push').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-code-push/android/app')
