--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "react-native": "0.20.0",
     "react-native-code-push": "1.7.3-beta",
     "react-native-communications": "0.2.3",
-    "react-native-config": "0.0.2",
+    "react-native-config": "danielweinmann/react-native-config#fix_ruby_script_path",
     "react-native-drawer-layout": "0.3.5",
     "react-native-facebook-login": "1.0.3",
     "react-native-geocoder": "0.3.1",
