Update versions on package.json

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "step2": "cd node_modules; find . -name .babelrc | grep -v packager | xargs rm"
   },
   "dependencies": {
-    "apsl-react-native-button": "danielweinmann/react-native-button",
+    "apsl-react-native-button": "APSL/react-native-button#3abb74394e165254595836fa287f30d2f096cd26",
     "fbjs": "^0.6.0",
     "haversine": "1.0.0",
     "moment": "2.11.1",
@@ -17,18 +17,17 @@
     "react-native": "0.20.0",
     "react-native-code-push": "1.7.3-beta",
     "react-native-communications": "0.2.3",
-    "react-native-config": "danielweinmann/react-native-config#fix_ruby_script_path",
+    "react-native-config": "0.0.3",
     "react-native-drawer-layout": "0.3.5",
     "react-native-facebook-login": "1.0.3",
     "react-native-geocoder": "0.3.1",
-    "react-native-gifted-form": "danielweinmann/react-native-gifted-form#widget_focus",
     "react-native-gifted-spinner": "0.0.3",
     "react-native-maps": "0.3.0",
     "react-native-router-flux": "danielweinmann/react-native-router-flux#route_props",
     "react-native-scrollable-tab-view": "0.4.0",
     "react-native-simple-store": "0.1.0",
-    "react-native-slider": "jeanregisser/react-native-slider",
-    "react-native-stateless-form": "0.0.6",
+    "react-native-slider": "jeanregisser/react-native-slider#34fcb5532a74e083cd6939c213d743e5f6463eeb",
+    "react-native-stateless-form": "0.1.0",
     "react-native-vector-icons": "1.1.1",
     "react-redux": "4.3.0",
     "redux": "3.2.1",
