--- a/.env.sample
+++ b/.env.sample
@@ -1,5 +1,7 @@
 API_URL=http://localhost:5000
 GOOGLE_MAPS_API_KEY=YOUR_KEY
+CODEPUSH_DEPLOYMENT_KEY_IOS=YOUR_KEY
 CODEPUSH_DEPLOYMENT_KEY_ANDROID=YOUR_KEY
+FACEBOOK_APP_ID=YOUR_APP_ID
 APP_STORE_URL=https://itunes.apple.com/app/id567264775?mt=8
 PLAY_STORE_URL=https://play.google.com/store/apps/details?id=br.com.easytaxi
