--- a/.env.sample
+++ b/.env.sample
@@ -5,3 +5,7 @@ CODEPUSH_DEPLOYMENT_KEY_ANDROID=YOUR_KEY
 FACEBOOK_APP_ID=YOUR_APP_ID
 APP_STORE_URL=https://itunes.apple.com/app/id567264775?mt=8
 PLAY_STORE_URL=https://play.google.com/store/apps/details?id=br.com.easytaxi
+RELEASE_STORE_FILE=tem-acucar-key.keystore
+RELEASE_KEY_ALIAS=tem-acucar-alias
+RELEASE_STORE_PASSWORD=YOUR_STORE_PASSWORD
+RELEASE_KEY_PASSWORD=YOUR_KEY_PASSWORD
