--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -92,6 +92,14 @@ android {
             abiFilters "armeabi-v7a", "x86"
         }
     }
+    signingConfigs {
+        release {
+            storeFile file(project.env.get("RELEASE_STORE_FILE"))
+            storePassword project.env.get("RELEASE_STORE_PASSWORD")
+            keyAlias project.env.get("RELEASE_KEY_ALIAS")
+            keyPassword project.env.get("RELEASE_KEY_PASSWORD")
+        }
+    }
     splits {
         abi {
             enable enableSeparateBuildPerCPUArchitecture
@@ -104,6 +112,7 @@ android {
         release {
             minifyEnabled enableProguardInReleaseBuilds
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
+            signingConfig signingConfigs.release
         }
     }
     // applicationVariants are e.g. debug, release
