--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-native-facebook-login": "1.0.3",
     "react-native-geocoder": "0.3.1",
     "react-native-gifted-spinner": "0.0.3",
+    "react-native-linear-gradient": "^1.5.2",
     "react-native-maps": "0.3.0",
     "react-native-router-flux": "danielweinmann/react-native-router-flux#route_props",
     "react-native-scrollable-tab-view": "0.4.0",
