--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -136,6 +136,7 @@ dependencies {
     compile project(':RNGeocoder')
     compile project(':react-native-config')
     compile project(':react-native-code-push')
+    compile project(':react-native-linear-gradient')
     compile fileTree(dir: "libs", include: ["*.jar"])
     compile "com.android.support:appcompat-v7:23.0.1"
     compile "com.facebook.react:react-native:0.20.+"
