New round of design tests

--- a/ios/TemAcucar/Info.sample.plist
+++ b/ios/TemAcucar/Info.sample.plist
@@ -91,6 +91,14 @@
       <string>OpenSans-SemiboldItalic.ttf</string>
       <string>OpenSans.ttf</string>
       <string>OpenSansLight-Italic.ttf</string>
+      <string>Montserrat-Black.otf</string>
+      <string>Montserrat-Bold.otf</string>
+      <string>Montserrat-ExtraBold.otf</string>
+      <string>Montserrat-Hairline.otf</string>
+      <string>Montserrat-Light.otf</string>
+      <string>Montserrat-Regular.otf</string>
+      <string>Montserrat-SemiBold.otf</string>
+      <string>Montserrat-UltraLight.otf</string>
     </array>
   </dict>
 </plist>
