--- a/.env.sample
+++ b/.env.sample
@@ -1,4 +1,5 @@
 API_URL=http://localhost:5000
+JS_URL=http://localhost:8081
 GOOGLE_MAPS_API_KEY=YOUR_KEY
 CODEPUSH_DEPLOYMENT_KEY_IOS=YOUR_KEY
 CODEPUSH_DEPLOYMENT_KEY_ANDROID=YOUR_KEY
