One more round of transaction design

--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "redux-form": "4.2.0",
     "redux-logger": "2.5.0",
     "redux-thunk": "1.0.3",
+    "truncate": "^2.0.0",
     "validate-model": "0.0.2"
   }
 }
