Adjusts design to android and implements a few performance optimizations

--- a/package.json
+++ b/package.json
@@ -16,14 +16,14 @@
     "object-key-filter": "0.0.4",
     "react-native": "0.20.0",
     "react-native-code-push": "1.7.3-beta",
-    "react-native-communications": "0.2.3",
+    "react-native-communications": "anarchicknight/react-native-communications#bcba294b5564d78f63c7fb6e74a5a9ff2dabf710",
     "react-native-config": "0.0.3",
     "react-native-drawer-layout": "0.3.5",
     "react-native-facebook-login": "1.0.3",
     "react-native-geocoder": "0.3.1",
     "react-native-gifted-spinner": "0.0.3",
     "react-native-linear-gradient": "^1.5.2",
-    "react-native-maps": "0.3.0",
+    "react-native-maps": "lelandrichardson/react-native-maps#46c7eec03532d979eb7d33c3daa2dc5527f05efa",
     "react-native-router-flux": "danielweinmann/react-native-router-flux#route_props",
     "react-native-scrollable-tab-view": "0.4.0",
     "react-native-simple-store": "0.1.0",
