--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -36,7 +36,7 @@
       </activity>
       <meta-data
         android:name="com.facebook.sdk.ApplicationId"
-        android:value="@string/fb_app_id"/>
+        android:value="@string/FACEBOOK_APP_ID"/>
     </application>
 
 </manifest>
