--- a/ios/TemAcucar/Info.sample.plist
+++ b/ios/TemAcucar/Info.sample.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
   <dict>
+    <key>CFBundleDisplayName</key>
+    <string>Tem Açúcar?</string>
     <key>CodePushDeploymentKey</key>
     <string>`${CODEPUSH_DEPLOYMENT_KEY}`</string>
     <key>CFBundleDevelopmentRegion</key>
@@ -55,7 +57,7 @@
     <key>FacebookAppID</key>
     <string>`${FACEBOOK_APP_ID}`</string>
     <key>FacebookDisplayName</key>
-    <string>Tem Açúcar</string>
+    <string>Tem Açúcar?</string>
     <key>LSApplicationQueriesSchemes</key>
     <array>
       <string>fbapi</string>
