--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -135,6 +135,7 @@ dependencies {
     compile project(':react-native-config')
     compile project(':react-native-code-push')
     compile project(':react-native-linear-gradient')
+    compile project(':react-native-system-notification')
     compile fileTree(dir: "libs", include: ["*.jar"])
     compile "com.android.support:appcompat-v7:23.0.1"
     compile "com.facebook.react:react-native:0.20.+"
