--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -3,6 +3,9 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.GET_TASKS" />
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
+    <uses-permission android:name="android.permission.VIBRATE"/>
 
     <application
       android:allowBackup="true"
@@ -37,6 +40,13 @@
       <meta-data
         android:name="com.facebook.sdk.ApplicationId"
         android:value="@string/FACEBOOK_APP_ID"/>
+      <receiver android:name="io.neson.react.notification.NotificationEventReceiver" />
+      <receiver android:name="io.neson.react.notification.NotificationPublisher" />
+      <receiver android:name="io.neson.react.notification.SystemBootEventReceiver">
+        <intent-filter>
+          <action android:name="android.intent.action.BOOT_COMPLETED"></action>
+        </intent-filter>
+      </receiver>
     </application>
 
 </manifest>
