--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -80,6 +80,9 @@ android {
     compileSdkVersion 23
     buildToolsVersion "23.0.1"
 
+    dexOptions {
+        javaMaxHeapSize "4g"
+    }
     defaultConfig {
         applicationId "com.temacucar"
         minSdkVersion 16
@@ -89,6 +92,7 @@ android {
         ndk {
             abiFilters "armeabi-v7a", "x86"
         }
+        multiDexEnabled true
     }
     signingConfigs {
         release {
@@ -129,14 +133,18 @@ android {
 }
 
 dependencies {
+    compile 'com.google.android.gms:play-services:8.4.0'
     compile project(':react-native-maps')
     compile project(':react-native-facebook-login')
     compile project(':RNGeocoder')
     compile project(':react-native-config')
     compile project(':react-native-code-push')
     compile project(':react-native-linear-gradient')
+    compile project(':RNGcmAndroid')
     compile project(':react-native-system-notification')
     compile fileTree(dir: "libs", include: ["*.jar"])
     compile "com.android.support:appcompat-v7:23.0.1"
     compile "com.facebook.react:react-native:0.20.+"
 }
+
+apply plugin: 'com.google.gms.google-services'
