--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,11 +1,19 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.temacucar">
 
+    <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="com.google.android.c2dm.permission.SEND" />
+    <uses-permission android:name="android.permission.GET_ACCOUNTS" />
+    <uses-permission android:name="android.permission.GET_TASKS" /> 
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
+    <permission android:name="com.temacucar.permission.C2D_MESSAGE" android:protectionLevel="signature" />
+    <uses-permission android:name="com.temacucar.permission.C2D_MESSAGE" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.VIBRATE"></uses-permission>
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-    <uses-permission android:name="android.permission.GET_TASKS" />
-    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
-    <uses-permission android:name="android.permission.VIBRATE"/>
 
     <application
       android:allowBackup="true"
@@ -40,6 +48,37 @@
       <meta-data
         android:name="com.facebook.sdk.ApplicationId"
         android:value="@string/FACEBOOK_APP_ID"/>
+      <meta-data
+        android:name="com.google.android.gms.version"
+        android:value="@integer/google_play_services_version" />
+
+      <receiver
+        android:name="com.google.android.gms.gcm.GcmReceiver"
+        android:exported="true"
+        android:permission="com.google.android.c2dm.permission.SEND" >
+        <intent-filter>
+          <action android:name="com.google.android.c2dm.intent.RECEIVE" />
+          <category android:name="com.temacucar" />
+        </intent-filter>
+      </receiver>
+      <service android:name="com.oney.gcm.GcmRegistrationService"/>
+      <service android:name="com.oney.gcm.BackgroundService"></service>
+
+      <service
+        android:name="com.oney.gcm.RNGcmListenerService"
+        android:exported="false" >
+        <intent-filter>
+          <action android:name="com.google.android.c2dm.intent.RECEIVE" />
+        </intent-filter>
+      </service>
+      <receiver
+        android:exported="false"
+        android:name="com.oney.gcm.GcmBroadcastReceiver">
+        <intent-filter>
+          <action android:name="com.oney.gcm.GCMReceiveNotification" />
+          </intent-filter>
+      </receiver>
+
       <receiver android:name="io.neson.react.notification.NotificationEventReceiver" />
       <receiver android:name="io.neson.react.notification.NotificationPublisher" />
       <receiver android:name="io.neson.react.notification.SystemBootEventReceiver">
