--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -80,9 +80,6 @@ android {
     compileSdkVersion 23
     buildToolsVersion "23.0.1"
 
-    dexOptions {
-        javaMaxHeapSize "4g"
-    }
     defaultConfig {
         applicationId "com.temacucar"
         minSdkVersion 16
@@ -92,7 +89,6 @@ android {
         ndk {
             abiFilters "armeabi-v7a", "x86"
         }
-        multiDexEnabled true
     }
     signingConfigs {
         release {
@@ -133,7 +129,7 @@ android {
 }
 
 dependencies {
-    compile 'com.google.android.gms:play-services:8.4.0'
+    compile 'com.google.android.gms:play-services-gcm:8.4.0'
     compile project(':react-native-maps')
     compile project(':react-native-facebook-login')
     compile project(':RNGeocoder')
