Installs Google Analytics bridge for iOS

--- a/.env.sample
+++ b/.env.sample
@@ -10,3 +10,5 @@ RELEASE_STORE_FILE=tem-acucar-key.keystore
 RELEASE_KEY_ALIAS=tem-acucar-alias
 RELEASE_STORE_PASSWORD=YOUR_STORE_PASSWORD
 RELEASE_KEY_PASSWORD=YOUR_KEY_PASSWORD
+GOOGLE_ANALYTICS_ID_IOS=UA-XXXXXXXX-X
+GOOGLE_ANALYTICS_ID_ANDROID=UA-XXXXXXXX-X
