--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-native-gcm-android": "oney/react-native-gcm-android#f4bd87215ab18d0bb99b34b4e3412d3222b457a9",
     "react-native-geocoder": "0.3.1",
     "react-native-gifted-spinner": "0.0.3",
+    "react-native-google-analytics-bridge": "2.0.0",
     "react-native-html-render": "danielweinmann/react-native-html-render#2661bd07d6dd7e572bcb395c283adc29162ab030",
     "react-native-linear-gradient": "1.5.2",
     "react-native-maps": "lelandrichardson/react-native-maps#46c7eec03532d979eb7d33c3daa2dc5527f05efa",
