--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -17,3 +17,5 @@ include ':RNGcmAndroid', ':app'
 project(':RNGcmAndroid').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-gcm-android/android')
 include ':react-native-system-notification'
 project(':react-native-system-notification').projectDir = new File(settingsDir, '../node_modules/react-native-system-notification/android')
+include ':react-native-google-analytics-bridge', ':app'
+project(':react-native-google-analytics-bridge').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-google-analytics-bridge/android')
